[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/main/main.gd" type="Script" id=1]
[ext_resource path="res://objects/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/player2.gd" type="Script" id=3]
[ext_resource path="res://objects/ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/Roboto-Regular.tres" type="DynamicFont" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 360 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 600, 10 )

[sub_resource type="DynamicFont" id=3]
size = 44
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 80
font_data = ExtResource( 5 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="color" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 180, 310 )

[node name="player2" parent="." instance=ExtResource( 2 )]
position = Vector2( 1100, 310 )
script = ExtResource( 3 )

[node name="ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 620, 360 )

[node name="goal_1" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="goal_1"]
position = Vector2( 20, 360 )
shape = SubResource( 1 )

[node name="goal_2" type="Area2D" parent="."]
position = Vector2( 1240, 0 )

[node name="collision" type="CollisionShape2D" parent="goal_2"]
position = Vector2( 20, 360 )
shape = SubResource( 1 )

[node name="bar_top" type="StaticBody2D" parent="."]
position = Vector2( 640, 0 )

[node name="collision" type="CollisionShape2D" parent="bar_top"]
position = Vector2( 0, 10 )
shape = SubResource( 2 )

[node name="color" type="ColorRect" parent="bar_top"]
margin_left = -640.0
margin_right = 640.0
margin_bottom = 20.0
color = Color( 0.509804, 0.509804, 0.509804, 1 )

[node name="bar_bottom" type="StaticBody2D" parent="."]
position = Vector2( 640, 700 )

[node name="collision" type="CollisionShape2D" parent="bar_bottom"]
position = Vector2( 0, 10 )
shape = SubResource( 2 )

[node name="color" type="ColorRect" parent="bar_bottom"]
margin_left = -640.0
margin_right = 640.0
margin_bottom = 20.0
color = Color( 0.509804, 0.509804, 0.509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_1" type="Label" parent="."]
margin_left = 40.0
margin_top = 330.0
margin_right = 80.0
margin_bottom = 378.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_2" type="Label" parent="."]
margin_left = 1200.0
margin_top = 330.0
margin_right = 1240.0
margin_bottom = 378.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="info" type="Label" parent="."]
margin_left = 264.0
margin_top = 103.0
margin_right = 1004.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 4 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speedInfo" type="Label" parent="."]
margin_left = 563.109
margin_top = 24.0
margin_right = 694.109
margin_bottom = 49.0
custom_fonts/font = ExtResource( 6 )
text = "Speed: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
